--- a/templates/main_header.html
+++ b/templates/main_header.html
@@ -5,7 +5,7 @@
   <h1>Flaskr</h1>
   <div class=metanav>
 
-    <a href="{{ url_for('hello_world') }}">Index</a>
+    <a href="{{ url_for('index') }}">Index</a>
 
     <a href="{{ url_for('createcity') }}">log out</a>
 
