--- a/templates/main_header.html
+++ b/templates/main_header.html
@@ -1,17 +1,10 @@
 <!doctype html>
-<title>Turbo-Lister</title>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
-<div class=page>
-  <h1>Flaskr</h1>
-  <div class=metanav>
+{% autoescape false %}
+    {{ headergen }}
+{% endautoescape %}
 
-    <a href="{{ url_for('index') }}">Index</a>
+{% block body %}{% endblock %}
 
-    <a href="{{ url_for('createcity') }}">log out</a>
-
-  </div>
-  {% for message in get_flashed_messages() %}
-    <div class=flash>{{ message }}</div>
-  {% endfor %}
-  {% block body %}{% endblock %}
-</div>
+{% autoescape false %}
+    {{ footergen }}
+{% endautoescape %}
