--- a/templates/header_gen.html
+++ b/templates/header_gen.html
@@ -1,14 +1,57 @@
-<html>
+<!--
+	Minimaxing 3.1 by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <head>
 <title>Turbo-Lister</title>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style-desktop.css') }}">
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<link href='http://fonts.googleapis.com/css?family=Ubuntu+Condensed' rel='stylesheet' type='text/css'>
+		<script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/config.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/skel.min.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/skel-panels.min.js') }}"></script>
+		<noscript>
+			<link rel="stylesheet" href="{{ url_for('static', filename='css/skel-noscript.css') }}" />
+			<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
+			<link rel="stylesheet" href="{{ url_for('static', filename='css/style-desktop.css') }}" />
+		</noscript>
+		<!--[if lte IE 9]><link rel="stylesheet" href="{{ url_for('static', filename='css/ie9.css') }}" /><![endif]-->
+		<!--[if lte IE 8]><script src="{{ url_for('static', filename='js/html5shiv.js') }}"></script><![endif]-->
 </head>
-<body>
-<div class=page>
+	<body>
+	<!-- ********************************************************* -->
+		<div id="header-wrapper">
+			<div class="container">
+				<div class="row">
+					<div class="12u">
+						
+						<header id="header">
+							<h1><a href="#" id="logo">turbo-lister</a></h1>
+							<nav id="nav">
+								<a href="index.html">Homepage</a>
+								<a href="twocolumn1.html">Two Column #1</a>
+								<a href="twocolumn2.html" class="current-page-item">Two Column #2</a>
+								<a href="onecolumn.html">One Column</a>
+								<a href="threecolumn.html">Three Column</a>
+							</nav>
+						</header>
+					
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		
+		
   <h1>Flaskr</h1>
   <div class=metanav>
 
-    <a href="{{ url_for('index') }}">Index</a>
+    <a href="{{ url_for('index') }}">Index2</a>
 
     <a href="{{ url_for('createcity') }}">log out</a>
 <br />
