--- a/templates/footer_gen.html
+++ b/templates/footer_gen.html
@@ -1,5 +1,77 @@
 <br />
-Bye!  Footer
-{{ tester }}
+<div id="footer-wrapper">
+			<div class="container">
+				<div class="row">
+					<div class="8u">
+						
+						<section>
+							<h2>Popular Pages</h2>
+							<div>
+								<div class="row">
+									<div class="3u">
+										<ul class="link-list">
+											<li><a href="#">DC IT Jobs</a></li>
+											<li><a href="#">DC Linux Jobs</a></li>
+											<li><a href="#">DC Business Jobs</a></li>
+										</ul>
+									</div>
+									<div class="3u">
+										<ul class="link-list">
+											<li><a href="#">Quis accumsan lorem</a></li>
+											<li><a href="#">Sed neque nisi consequat</a></li>
+											<li><a href="#">Eget et amet consequat</a></li>
+											<li><a href="#">Dapibus sed mattis blandit</a></li>
+											<li><a href="#">Vitae magna sed dolore</a></li>
+										</ul>
+									</div>
+									<div class="3u">
+										<ul class="link-list">
+											<li><a href="#">Sed neque nisi consequat</a></li>
+											<li><a href="#">Dapibus sed mattis blandit</a></li>
+											<li><a href="#">Quis accumsan lorem</a></li>
+											<li><a href="#">Suspendisse varius ipsum</a></li>
+											<li><a href="#">Eget et amet consequat</a></li>
+										</ul>
+									</div>
+									<div class="3u">
+										<ul class="link-list">
+											<li><a href="#">Quis accumsan lorem</a></li>
+											<li><a href="#">Sed neque nisi consequat</a></li>
+											<li><a href="#">Eget et amet consequat</a></li>
+											<li><a href="#">Dapibus sed mattis blandit</a></li>
+											<li><a href="#">Vitae magna sed dolore</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</section>
+					
+					</div>
+					<div class="4u">
+
+						<section>
+							<h2>100% Free?</h2>
+							<p>This site is built on 100% free open source software.  This enables us
+							to create a cutting-edge job platform with very low overhead.
+							Find out more about our software stack</p>
+							<footer class="controls">
+								<a href="#" class="button">More information ...</a>
+							</footer>
+						</section>
+
+					</div>
+				</div>
+				<div class="row">
+					<div class="12u">
+
+						<div id="copyright">
+							&copy; turbo-lister. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a> | Images: <a href="http://fotogrph.com">fotogrph</a>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	<!-- ********************************************************* -->
 </body>
 </html>
