--- a/templates/header_gen.html
+++ b/templates/header_gen.html
@@ -23,21 +23,110 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="{{ url_for('static', filename='css/ie9.css') }}" /><![endif]-->
 		<!--[if lte IE 8]><script src="{{ url_for('static', filename='js/html5shiv.js') }}"></script><![endif]-->
 </head>
+<script>
+  // This is called with the results from from FB.getLoginStatus().
+  function statusChangeCallback(response) {
+    console.log('statusChangeCallback');
+    console.log(response);
+    // The response object is returned with a status field that lets the
+    // app know the current login status of the person.
+    // Full docs on the response object can be found in the documentation
+    // for FB.getLoginStatus().
+    if (response.status === 'connected') {
+      // Logged into your app and Facebook.
+      testAPI();
+    } else if (response.status === 'not_authorized') {
+      // The person is logged into Facebook, but not your app.
+      document.getElementById('status').innerHTML = 'Please log ' +
+        'into this app.';
+    } else {
+      // The person is not logged into Facebook, so we're not sure if
+      // they are logged into this app or not.
+      document.getElementById('status').innerHTML = 'Please log ' +
+        'into Facebook.';
+    }
+  }
+
+  // This function is called when someone finishes with the Login
+  // Button.  See the onlogin handler attached to it in the sample
+  // code below.
+  function checkLoginState() {
+   window.location='/jobs/MD';
+    FB.getLoginStatus(function(response) {
+      statusChangeCallback(response);
+      
+    });
+  }
+
+  window.fbAsyncInit = function() {
+  FB.init({
+    appId      : '1431662007122283',
+    cookie     : true,  // enable cookies to allow the server to access 
+                        // the session
+    xfbml      : true,  // parse social plugins on this page
+    version    : 'v2.0' // use version 2.0
+  });
+
+  // Now that we've initialized the JavaScript SDK, we call 
+  // FB.getLoginStatus().  This function gets the state of the
+  // person visiting this page and can return one of three states to
+  // the callback you provide.  They can be:
+  //
+  // 1. Logged into your app ('connected')
+  // 2. Logged into Facebook, but not your app ('not_authorized')
+  // 3. Not logged into Facebook and can't tell if they are logged into
+  //    your app or not.
+  //
+  // These three cases are handled in the callback function.
+
+  FB.getLoginStatus(function(response) {
+    statusChangeCallback(response);
+  });
+
+  };
+
+  // Load the SDK asynchronously
+  (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/sdk.js";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+
+  // Here we run a very simple test of the Graph API after login is
+  // successful.  See statusChangeCallback() for when this call is made.
+  function testAPI() {
+    console.log('Welcome!  Fetching your information.... ');
+    FB.api('/me', function(response) {
+      console.log('Successful login for: ' + response.name);
+      document.getElementById('status').innerHTML =
+        'Thanks for logging in, ' + response.name + '!';
+        
+    });
+  }
+</script>
+
+<!--
+  Below we include the Login Button social plugin. This button uses
+  the JavaScript SDK to present a graphical Login button that triggers
+  the FB.login() function when clicked.
+-->
 	<body>
 	<!-- ********************************************************* -->
+	
 		<div id="header-wrapper">
 			<div class="container">
 				<div class="row">
 					<div class="12u">
-						
 						<header id="header">
 							<h1><a href="#" id="logo">turbo-lister</a></h1>
 							<nav id="nav">
 								<a href="index.html">Homepage</a>
-								<a href="twocolumn1.html">Two Column #1</a>
-								<a href="twocolumn2.html" class="current-page-item">Two Column #2</a>
-								<a href="onecolumn.html">One Column</a>
-								<a href="threecolumn.html">Three Column</a>
+								<a href="twocolumn1.html">Post</a>
+								<a href="twocolumn2.html" class="current-page-item">About Us</a>
+								<a href="onecolumn.html">Contact Us</a>
+								<a href="threecolumn.html">Resources</a>
 							</nav>
 						</header>
 					
@@ -48,18 +137,4 @@
 		
 		
 		
-  <h1>Flaskr</h1>
-  <div class=metanav>
 
-    <a href="{{ url_for('index') }}">Index2</a>
-
-    <a href="{{ url_for('createcity') }}">log out</a>
-<br />
-{% autoescape false %}
-    {{ test }}
-{% endautoescape %}
-<br />
-  </div>
-  {% for message in get_flashed_messages() %}
-    <div class=flash>{{ message }}</div>
-  {% endfor %}
