--- a/templates/header_gen.html
+++ b/templates/header_gen.html
@@ -122,7 +122,7 @@
 						<header id="header">
 							<h1><a href="#" id="logo">turbo-lister</a></h1>
 							<nav id="nav">
-								<a href="index.html">Homepage</a>
+								<a href="index.html">sign-in</a>
 								<a href="twocolumn1.html">Post</a>
 								<a href="twocolumn2.html" class="current-page-item">About Us</a>
 								<a href="onecolumn.html">Contact Us</a>
