moved header and footer into cache.

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -18,14 +18,14 @@
 									<div class="6u">
 										<ul class="link-list">
 											{% for cat in allcats %}
-											<li><a href="/{{ cat.urlname }}">{{ cat.name }}</a></li>
+											<li><a href="/alljobs/{{ cat.urlname }}">{{ cat.name }}</a></li>
 											{% endfor %}
 										</ul>
 									</div>
 									<div class="6u">
 										<ul class="link-list">
 											{% for cat in allcats %}
-											<li><a href="/{{ cat.urlname }}">{{ cat.name }}</a></li>
+											<li><a href="/alljobs/{{ cat.urlname }}">{{ cat.name }}</a></li>
 											{% endfor %}
 										</ul>
 									</div>
@@ -81,7 +81,7 @@
 					<div class="8u skel-cell-important">
 
 						<section class="right-content">
-							
+							This is the main section.
 						</section>
 					
 					</div>
