--- a/templates/header_gen.html
+++ b/templates/header_gen.html
@@ -120,9 +120,9 @@
 				<div class="row">
 					<div class="12u">
 						<header id="header">
-							<h1><a href="#" id="logo">turbo-lister</a></h1>
+							<h1><a href="{{ url_for('index') }}" id="logo">turbo-lister</a></h1>
 							<nav id="nav">
-								<a href="index.html">sign-in</a>
+								<a href="{{ url_for('signinview') }}">sign-in</a>
 								<a href="twocolumn1.html">Post</a>
 								<a href="twocolumn2.html" class="current-page-item">About Us</a>
 								<a href="onecolumn.html">Contact Us</a>
