--- a/templates/cat_alljobs.html
+++ b/templates/cat_alljobs.html
@@ -1,6 +1,6 @@
 {% extends "main_header.html" %}
 {% block body %}
-Index of city's home page.
+List of all jobs in cat.
 <h2>{{ jobs }}</h2>
 
 {% endblock %}
