--- a/templates/header_gen.html
+++ b/templates/header_gen.html
@@ -124,7 +124,7 @@
 							<nav id="nav">
 								<a href="{{ url_for('signinview') }}">sign-in</a>
 								<a href="twocolumn1.html">Post</a>
-								<a href="twocolumn2.html" class="current-page-item">About Us</a>
+								<a href="twocolumn2.html">About Us</a>
 								<a href="onecolumn.html">Contact Us</a>
 								<a href="threecolumn.html">Resources</a>
 							</nav>
