--- a/templates/leftsidebar_gen.html
+++ b/templates/leftsidebar_gen.html
@@ -7,11 +7,23 @@
 											{% for cat in allcats %}
 											<li><a href="/alljobs/{{ cat.urlname }}">{{ cat.name }}</a></li>
 											{% endfor %}
+																						{% for cat in allcats %}
+											<li><a href="/alljobs/{{ cat.urlname }}">{{ cat.name }}</a></li>
+											{% endfor %}
+																						{% for cat in allcats %}
+											<li><a href="/alljobs/{{ cat.urlname }}">{{ cat.name }}</a></li>
+											{% endfor %}
 										</ul>
 									</div>
 									<div class="6u">
 										<ul class="link-list">
 											{% for cat in allcats %}
+											<li><a href="/alljobs/{{ cat.urlname }}">{{ cat.name }}</a></li>
+											{% endfor %}
+																						{% for cat in allcats %}
+											<li><a href="/alljobs/{{ cat.urlname }}">{{ cat.name }}</a></li>
+											{% endfor %}
+																						{% for cat in allcats %}
 											<li><a href="/alljobs/{{ cat.urlname }}">{{ cat.name }}</a></li>
 											{% endfor %}
 										</ul>
