--- a/templates/header_gen.html
+++ b/templates/header_gen.html
@@ -123,7 +123,7 @@
 							<h1><a href="{{ url_for('index') }}" id="logo">turbo-lister</a></h1>
 							<nav id="nav">
 								<a href="{{ url_for('signinview') }}">sign-in</a>
-								<a href="twocolumn1.html">Post</a>
+								<a href="/postjob">Post</a>
 								<a href="twocolumn2.html">About Us</a>
 								<a href="onecolumn.html">Contact Us</a>
 								<a href="threecolumn.html">Resources</a>
