--- a/templates/postjob.html
+++ b/templates/postjob.html
@@ -2,26 +2,40 @@
 
 {% block body %}
 
-<script src="//cdn.ckeditor.com/4.4.4/standard-all/ckeditor.js"></script>
+<script src="//cdn.ckeditor.com/4.4.4/full-all/ckeditor.js"></script>
 <div id="main">
 	<div class="container">
-		<h2>Create a new job listing:</h2>
-		        <form>
+		<h2>Create a new job listing.</h2>
+		     <form id="answerform" name="input" action={{ url_for('postjobview') }} method="post">
 		     <label><h3>State:</h3></label>
 		     <label><h3>City:</h3></label>
 		     <label><h3>Category:</h3></label>
 		     <br />
 		     <label><h3>Title:</h3></label>
-            <textarea name="editor1" id="editor1" rows="10" cols="80">
-                Enter your job description here.   Javascript and HTML are prohibited.  BBCode is valid.
-            </textarea>
-            <script>
-                // Replace the <textarea id="editor1"> with a CKEditor
-                // instance, using default configuration.
-                CKEDITOR.replace( 'editor1' );
-                CKEDITOR.config.extraPlugins = 'bbcode,colorbutton';
-            </script>
+            <textarea id="jobtext" rows="20" cols="120" name="jobtext" form="answerform">{{ editortext }}</textarea>
+
+
+<script>
+$(function() {
+    // Replace all textarea's
+    // with SCEditor
+    $("textarea").sceditor({
+        plugins: "bbcode",
+	style: "minified/jquery.sceditor.default.min.css"
+    });
+});
+</script>
+            <input type="hidden" value="[b]testing[/b]" name="jobtext">
+            <input type="submit" value="Preview">
         </form>
+
+        <div id="previewpane">
+        				<h2>Preview:</h2>
+        				{% autoescape false %}
+    					{{ previewtext }}
+						{% endautoescape %}
+        </div>
+
 	</div>
 </div>
 
