--- a/templates/leftsidebar_gen.html
+++ b/templates/leftsidebar_gen.html
@@ -4,26 +4,15 @@
 								<div class="row">
 									<div class="6u">
 										<ul class="link-list">
-											{% for cat in allcats %}
+											{% for cat in leftcats %}
 											<li><a href="/alljobs/{{ cat.urlname }}">{{ cat.name }}</a></li>
 											{% endfor %}
-																						{% for cat in allcats %}
-											<li><a href="/alljobs/{{ cat.urlname }}">{{ cat.name }}</a></li>
-											{% endfor %}
-																						{% for cat in allcats %}
-											<li><a href="/alljobs/{{ cat.urlname }}">{{ cat.name }}</a></li>
-											{% endfor %}
+											
 										</ul>
 									</div>
 									<div class="6u">
 										<ul class="link-list">
-											{% for cat in allcats %}
-											<li><a href="/alljobs/{{ cat.urlname }}">{{ cat.name }}</a></li>
-											{% endfor %}
-																						{% for cat in allcats %}
-											<li><a href="/alljobs/{{ cat.urlname }}">{{ cat.name }}</a></li>
-											{% endfor %}
-																						{% for cat in allcats %}
+											{% for cat in rightcats %}
 											<li><a href="/alljobs/{{ cat.urlname }}">{{ cat.name }}</a></li>
 											{% endfor %}
 										</ul>
