Worked on postjob page.

--- a/templates/postheader_gen.html
+++ b/templates/postheader_gen.html
@@ -11,6 +11,15 @@
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <link rel="stylesheet" href="http://www.sceditor.com/minified/themes/default.min.css" type="text/css" media="all" />
 <script type="text/javascript" src="http://www.sceditor.com/minified/jquery.sceditor.bbcode.min.js"></script>
+
+<link href='http://fonts.googleapis.com/css?family=Ubuntu+Condensed' rel='stylesheet' type='text/css'>
+
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style-desktop.css') }}">
+
+		<script src="{{ url_for('static', filename='js/config.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/skel.min.js') }}"></script>
+		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/posting.css') }}">
+
 </head>
 <script>
   // This is called with the results from from FB.getLoginStatus().
