--- a/static/css/posting.css
+++ b/static/css/posting.css
@@ -63,7 +63,11 @@ word-wrap: break-word;
 z-index: auto;
 zoom: 1;
 }
-
+#warn {
+font-size: 14px;
+color: #000;
+font-family: Times New Roman;
+}
 #previewpane strong {
 font-weight: bold;
 }
