Removing fb login stuff for standard login.

--- a/templates/myaccount_gen2.html
+++ b/templates/myaccount_gen2.html
@@ -1,5 +1,6 @@
 <section>
 	<h2>My Account</h2>
+	<div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="true" data-auto-logout-link="true" onlogin="checkLoginState();"></div>
 	<ul class="small-image-list">
 		<li>
 			<a href="#"><img src="/static/images/document-add-icon.png" alt="" class="left" /></a>
